# DeepAgentCourse

./: .env.sample  README.md  main.py  pyproject.toml
Notebooks/: basic.ipynb  context_engg.ipynb  helper.py
Notebooks/projects/: AGENTS.md
Notebooks/skills/langchain/: examples.md  instruction.md  skill.md
Notebooks/skills/langgraph/: examples.md  instruction.md  skill.md
Notebooks/skills/python/: examples.md  instruction.md  skill.md
Notebooks/skills/report/: examples.md  instruction.md  skill.md
