[project]
name = "deepagentcourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.10",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
